tests/tmytests/bad/class_null_extends.lat
class A extends B {
    int fieldA;

    int method() {
        return 1;
    }
}

int main() {
    return 0;
}